--- a/components/templates/CarDetails.module.css
+++ b/components/templates/CarDetails.module.css
@@ -5,8 +5,9 @@
      flex-direction: column;
    }
    .image {
-     width: 100%;
-     border-radius: 5px;
+     width: 80%;
+     border-radius: 8px;
+     margin: 0 auto;
    }
    
    .header {
