change color header for device mobile

--- a/components/layout/Layout.module.css
+++ b/components/layout/Layout.module.css
@@ -43,6 +43,6 @@
    @media (max-width: 600px) {
      .header {
        width: 320px;
-       color : red;
+       color : rgb(3, 152, 147);
      }
    }
