--- a/components/templates/CarDetails.module.css
+++ b/components/templates/CarDetails.module.css
@@ -9,6 +9,22 @@
      border-radius: 8px;
      margin: 0 auto;
    }
+
+   .back {
+    display: flex;
+    align-items: center;
+    font-size: 1.5rem;
+    width: fit-content;
+    background-color: #befa00;
+    padding: 10px 15px;
+    border-radius: 5px;
+    margin: 50px 0;
+    cursor: pointer;
+  }
+  
+  .back p {
+    margin-left: 10px;
+  }
    
    .header {
      margin: 40px 0 20px;
